@@ -65,6 +65,10 @@ Core and Builtins
 Library
 -------
 
+- Issue #7617: Make sure distutils.unixccompiler.UnixCCompiler recognizes
+  gcc when it has a fully qualified configuration prefix. Initial patch
+  by Arfrever.
+
 - Issue #7092: Remove py3k warning when importing cPickle.  2to3 handles
   renaming of `cPickle` to `pickle`.  The warning was annoying since there's
   no alternative to cPickle if you care about performance.  Patch by Florent
